--- a/frontend/src/app/components/historique/historique.component.html
+++ b/frontend/src/app/components/historique/historique.component.html
@@ -1,12 +1,9 @@
-<head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js"></script>
-</head>
-<body>
+<br><br><br><br><br><div class="historique-container">
+  <div class="graph-container">
     <canvas id="graph1" width="250px" height="100px"></canvas>
-    <script src="./chart.js"></script>
-</body>
-<br><br><br><br><br><br><br><br><link rel="stylesheet" type="text/css" target="_blank" href="./historique.component.css" />
-<div class="historique-container">
+  </div>
+  
+  <div class="historique-details">
     <h1>Historique des Tests</h1>
     <div class="stats">
       <p><strong>Taux de réussite :</strong> {{ statistiques.tauxReussite }}%</p>
@@ -16,13 +13,21 @@
           {{ statistiques.scoreMoyen }}/40
         </span>
       </p>
+      <p><strong>Score total :</strong> {{ statistiques.scoreTotal }}</p>
+
+      <div *ngIf="statistiques.peutPasserExamen" class="examen-ok">
+        ✅ <a routerLink="/rdv" class="rdv-link">Félicitations ! Vous êtes éligible pour passer l'examen. Cliquez ici pour prendre un rendez-vous.</a>
+      </div>
+      <div *ngIf="!statistiques.peutPasserExamen" class="examen-non">
+        ❌ Vous n'êtes pas encore éligible à l'examen. Continuez vos révisions !
+      </div>
     </div>
-    
+
     <h2>Derniers tests effectués</h2>
     <ul>
-      <li *ngFor="let test of testsRecents">
-        📅 Test du {{ test.date }} : {{ test.score }}/40
+      <li *ngFor="let testItem of testsRecents" (click)="afficherDetails(testItem)" class="test-card">
+        📅 Test du {{ testItem.date }} : {{ testItem.score }}/40
       </li>
     </ul>
   </div>
-  
+</div>
