Modification du login pour pouvoir se connecter avec son prenom au lieu de l'id_user

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -18,8 +18,8 @@
         <div class="login-container">
             <h2>Connexion</h2>
             <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-                <label for="id_user">Identifiant</label>
-                <input type="text" id="id_user" name="id_user" [(ngModel)]="loginData.id_user" required>
+                <label for="prenom">Prénom</label>
+                <input type="text" id="prenom" name="prenom" [(ngModel)]="loginData.prenom" required>                
                 
                 <label for="password">Mot de passe</label>
                 <input type="password" id="password" name="password" [(ngModel)]="loginData.password" required>
