--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -11,7 +11,9 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="../../../assets/Logo.png" alt="logo" />
+        <a routerLink="/app-home" style="display: inline-block;">
+          <img src="../../../assets/Logo.png" alt="logo" style="cursor: pointer;" />
+        </a>
       </div>
       <ul>
         <li>
@@ -21,7 +23,7 @@
           <br> <a routerLink="/dashboard">Dashboard</a>
         </li>
         <li>
-          <br> <a href="#">Statistiques</a>
+          <br> <a routerLink="/stats">Statistiques</a>
         </li>
         <li>
           <br> <a  routerLink="/support">Support</a>
