--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
       <div class="logo">
-        <a routerLink="/app-home" style="display: inline-block;">
+        <a routerLink="" style="display: inline-block;">
           <img src="../../../assets/Logo.png" alt="logo" style="cursor: pointer;" />
         </a>
       </div>
