--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -28,6 +28,11 @@
                 <button type="submit" [disabled]="loginForm.invalid">Se connecter</button>
             </form>
         </div>
-    </div>
+    </div><br><br><br><br><br><br>
+    <div class="video-container">
+        <video autoplay loop muted>
+            <source src="../../../assets/3D.mp4" type="video/mp4">
+        </video>
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
