--- a/frontend/src/app/components/stats/stats.component.html
+++ b/frontend/src/app/components/stats/stats.component.html
@@ -1,5 +1,6 @@
-<br><br><br><br><br><div class="stats-container">
-    <h2>Statistiques des Candidats</h2>
+<br><br><br><br><br><br><br><br><br><br><br><br><div class="stats-container">
+  <h2>Statistiques des Candidats</h2>
+  <div style="position: relative; width: 100%; height: 400px;">
     <canvas id="canvas"></canvas>
   </div>
-  
+</div>
