--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -110,3 +110,18 @@
         button:hover {
             background: #820f0f;
         }
+        .video-container {
+            width: 100%;
+            max-width: 100%;
+            height: 100vh; /* Le vidéo occupe toute la hauteur de la fenêtre */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Permet de garder les proportions de la vidéo sans déformation */
+            border-radius: 10px; /* Coins arrondis pour un meilleur design */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Ombre portée pour un effet de profondeur */
+        }
