--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -17,8 +17,8 @@
             <h4>Aide & Contact</h4>
             <ul>
                 <li><a routerLink="/contact">Contact Auto-École</a></li>
-                <li><a href="#">FAQ Auto-École</a></li>
-                <li><a href="#">Nous contacter</a></li>
+                <li><a routerLink="/support">FAQ Auto-École</a></li>
+                <li><a routerLink="/contact">Nous contacter</a></li>
             </ul>
         </div>
         <div class="footer-section">
