--- a/frontend/src/app/components/stats/stats.component.html
+++ b/frontend/src/app/components/stats/stats.component.html
@@ -1,6 +1,7 @@
-<br><br><br><br><br><br><br><br><br><br><br><br><div class="stats-container">
+<br><br><br><div class="stats-container">
   <h2>Statistiques des Candidats</h2>
-  <div style="position: relative; width: 100%; height: 400px;">
+  <div class="chart-wrapper">
     <canvas id="canvas"></canvas>
   </div>
-</div>
+  <p id="total-candidats" class="total-info"></p>
+</div><br><br><br>
