"modifications générales du projet"

--- a/frontend/src/app/components/admin-header/admin-header.component.html
+++ b/frontend/src/app/components/admin-header/admin-header.component.html
@@ -29,6 +29,9 @@
         <li>
           <a routerLink="/admin-profil">Profil</a>
         </li>
+        <li>
+          <a routerLink="/login" (click)="deconnexion()">Deconnexion</a>
+        </li>
       </ul>
       <div class="hamburger" (click)="toggleMenu()">
         <span class="line"></span>
@@ -52,6 +55,9 @@
         </li>
         <li>
           <a routerLink="/profil"  (click)="closeMenu()">Profil</a>
+        </li>
+        <li>
+          <a routerLink="/login" (click)="deconnexion()">Deconnexion</a>
         </li>
       </ul>
     </div>
