--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Responsive Navbar</title>
+    <title>Navbar Responsive</title>
     <link rel="stylesheet" type="text/css" href="./header.component.css" />
   </head>
   <body>
     <nav>
       <div class="logo">
-        <a routerLink="" style="display: inline-block;">
+        <a routerLink="/" style="display: inline-block;">
           <img src="../../../assets/Logo.png" alt="logo" style="cursor: pointer;" />
         </a>
       </div>
       <ul *ngIf="!menuOpen">
         <li>
-          <a routerLink="/historique/:id_user">Historique</a>
+          <a routerLink="/historique">Historique</a>
         </li>
         <li>
           <a routerLink="/stats">Statistiques</a>
@@ -27,6 +27,10 @@
         <li>
           <a routerLink="/profil">Profil</a>
         </li>
+
+        <li *ngIf="authService.estAuthentifie()">
+          <a href="javascript:void(0)" (click)="logout()">Se déconnecter</a>
+        </li>
       </ul>
       <div class="hamburger" (click)="toggleMenu()">
         <span class="line"></span>
@@ -34,19 +38,24 @@
         <span class="line"></span>
       </div>
     </nav>
+
+
     <div class="menubar" [ngClass]="{'active': menuOpen}">
       <ul>
         <li>
-          <a routerLink="/historique/:id_user" >Historique</a>
+          <a routerLink="/historique" (click)="closeMenu()">Historique</a>
         </li>
         <li>
-          <a routerLink="/stats"  (click)="closeMenu()">Statistiques</a>
+          <a routerLink="/stats" (click)="closeMenu()">Statistiques</a>
         </li>
         <li>
-          <a routerLink="/support"  (click)="closeMenu()">Support</a>
+          <a routerLink="/support" (click)="closeMenu()">Support</a>
         </li>
         <li>
-          <a routerLink="/profil"  (click)="closeMenu()">Profil</a>
+          <a routerLink="/profil" (click)="closeMenu()">Profil</a>
+        </li>
+        <li>
+          <a routerLink="/login" (click)="deconnexion()">Deconnexion</a>
         </li>
       </ul>
     </div>
