--- a/frontend/src/app/components/admin-profil/admin-profil.component.html
+++ b/frontend/src/app/components/admin-profil/admin-profil.component.html
@@ -31,7 +31,7 @@
 <div class="profil-container">
     <h2>Profil</h2><br>
 
-    <div *ngIf="isAdmin" class="admin-message">
+    <div *ngIf="estAdmin" class="admin-message">
         <h3>Connexion réussie ! <br><br>Vous êtes un administrateur</h3>
     </div><br>
 </div><br><br><br><br><br><br><br>
