--- a/frontend/src/app/components/admin-profil/admin-profil.component.css
+++ b/frontend/src/app/components/admin-profil/admin-profil.component.css
@@ -51,17 +51,20 @@ nav ul li {
     margin-left: 1.5rem;
 }
 
-nav ul li a {
+nav ul li a, .deco {
     text-decoration: none;
+    background-color: transparent;
     color: #333;
     font-size: 1rem;
+    align-items: center;
     font-weight: 500;
-    padding: 8px 20px;
+    padding: 0px;
+    margin: 0px;
     border-radius: 5px;
     transition: background 0.3s ease;
 }
 
-nav ul li a:hover {
+nav ul li a:hover, .deco:hover {
     background-color: rgba(188, 188, 188, 0.2);
 }
 
