--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -50,12 +50,15 @@ nav ul li {
   margin-left: 1.5rem;
 }
 
-nav ul li a {
+nav ul li a, .deco {
   text-decoration: none;
+  background-color: transparent;
   color: #333;
   font-size: 1rem;
+  align-items: center;
   font-weight: 500;
-  padding: 8px 20px;
+  padding: 0px;
+  margin: 0px;
   border-radius: 5px;
   transition: background 0.3s ease;
 }
