--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
         <div class="login-container">
             <h2>Connexion</h2>
             <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-                <label for="prenom">Prénom</label>
+                <label for="prenom">Identifiant</label>
                 <input type="text" id="prenom" name="prenom" [(ngModel)]="loginData.prenom" required>                
                 
                 <label for="password">Mot de passe</label>
